--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
         <item>ft</item>
         <item>in</item>
     </string-array>
+
+    <string name="dataMeasure_instructions">How to record measurements:\n1.Look down phone pointed at object
+    \n2.Tap screen once\n3.Look up phone and tap screen\n  when object is at max point</string>
 </resources>
