--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,12 @@
         <item>in</item>
     </string-array>
 
+    <string name="introduction">Welcome to (Good App Name)</string>
+    <string name="intro_part2">This app allows you to determine the height of any object by using your
+        distance from object and the angles recorded when you point your phone at the starting and ending points of
+        the object or its trajectory.
+        </string>
+
     <string name="dataMeasure_instructions">How to record measurements:\n1.Look down phone pointed at object
     \n2.Tap button once\n3.Look up phone and tap button\n  when object is at max point</string>
 
